# robotter-backend-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  TODO.md  config.py  default.env  dev.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  environment.yml  hummingbot  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  strategies.json
bots/controllers/directional_trading/: bollinger_v1.py
bots/controllers/generic/: spot_perp_arbitrage.py
bots/credentials/: .gitignore
bots/credentials/master_account/: .password_verification  conf_client.yml
certs/: ca_cert.pem  ca_key.pem  client_cert.pem  client_csr.pem  client_key.pem  gateway_cert.pem  gateway_key.pem  server_cert.pem  server_csr.pem  server_key.pem
conf/: .gitignore  conf_client.yml  conf_fee_overrides.yml  ethereum.yml  root.yml  server.yml  solana.yml
conf/lists/: arbitrum_coingecko_20230610.json  ethereum_coingecko_20230610.json
routers/: backtest.py  backtest_models.py  bots.py  instances.py  market_data.py  market_data_models.py  strategies.py  strategies_models.py  strategy_models.py  trade_models.py  trades.py  volume_profile.py
services/: accounts_service.py  backtesting_service.py  birdeye_data_provider.py  birdeye_service.py  bots_orchestrator.py  docker_service.py  libert_ai_service.py  types.py
solana/: mango.db
src/: main.py
src/config/: settings.py  strategy.py
src/config/environments/: development.py  (+1 more)
src/routers/: strategies.py
src/utils/: conf.py  gateway.py  models.py  security.py
tests/: conftest.py  setup_config.sh  test_backtest.py  test_libert_ai_service.py  test_strategies.py
tests/fixtures/: strategy_config.json
tests/integration/: test_backtest_workflow.py  test_backtesting_service.py  test_libert_ai_service.py
tests/unit/: test_backtest.py  test_backtesting_service.py  test_libert_ai_client.py  test_libert_ai_service.py  test_strategies.py
utils/: gateway.py
(+3 files in other folders)
