[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotter-backend-api"
version = "0.1.0"
authors = [
  { name="Mike Henry" },
]
description = "Robotter Backend API"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "strict"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
